--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "nearleyc src/grammar.ne -o src/grammar.js && tsc",
     "run": "node dist/main.js",
     "build:watch": "tsc --watch",
     "run:watch": "nodemon dist/main.js --watch dist",
