--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "keywords": [],
   "author": "shreyasm-dev",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shreyasm-dev/formulant"
+  },
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
